--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -140,64 +140,18 @@ a:hover{
   }
 }
 
-/*
-.navbar{
-  border-bottom: solid 2px $light_gray;
+#navToggle{
+  display: none;
+  position: fixed;
+  z-index: 101;
+  top: 5px;
+  right: 5px;
+  background: $blue;
+  border: none;
+  color: #fff;
+  padding: 5px 15px;
 }
 
-.navbar-toggle{
-  .button-text{
-    display: inline-block;
-    vertical-align: middle;
-    text-transform: uppercase;
-    font-family: $fontTitle;
-    font-size:  16px;
-    margin-right: 10px;
-  }
-  .icon-bars{
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .icon-bar{
-    background-color: $gray;
-  }
-}
-.navbar:before{
-  content: '';
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: $light_gray;
-  margin-top: 100px;
-}
-
-.navbar-nav{
-  a{
-    text-transform: uppercase;
-    color: $gray;
-    font-family: $fontTitle;
-    font-size: 16px;
-    position: relative;
-    
-    img{
-      position: absolute;
-      left: 50%;
-      bottom: 70px;
-      -webkit-transform: translate(-50%,0);
-      -moz-transform: translate(-50%,0);
-      -ms-transform: translate(-50%,0);
-      -o-transform: translate(-50%,0);
-      transform: translate(-50%,0);
-    }
-  }
-}
-
-.dropdown-menu{
-  a{
-    font-family: $fontMain;
-    font-size: 14px;
-  }
-}*/
 
 @media (min-width: 991px) {
   //navbar ovveride
@@ -264,12 +218,13 @@ footer{
 }
 
 .footer_social_menu{
-  margin: 30px 0;
+  margin: 15px 0;
   padding: 0;
   list-style: none;
 
   li{
-    float: left;
+    display: inline-block;
+    vertical-align: top;
     margin-right: 25px;
 
     a{
