--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -3,22 +3,34 @@
     width: 100%;
     overflow-x: hidden;
   }
+
+  #top_header{
+    display: none;
+  }
+
+  #logo_bar{
+    img{
+      height: auto;
+      width: 65%;
+    }
+  }
+
+  #navToggle{
+    display: block;
+  }
+
   .nav-menu{
     position: fixed;
     z-index: 100;
     height: 100%;
-    width: 80%;
-    background-color: rgba(#fff,0.85);
+    width: 100%;
+    background-color: rgba(#fff, 0.95);
     padding: 10px 0;
     top: 0;
-    left: -80%;
+    left: -100%;
     margin: 0;
     border: 0;
-    text-align: left;
     @include transition(0.3s);
-  }
-  .nav-menu.visible{
-    @include transform(translate(100%,0));
 
     .main-menu{
       position: relative;
@@ -31,7 +43,7 @@
     .menu-item{
       display: block;
       padding-left: 50px;
-      border-bottom: solid 1px $light_gray;
+      margin-bottom: 15px;
 
       img{
         left: 25px;
@@ -52,7 +64,22 @@
       ul{
         display: block;
         position: relative;
+        background: none;
       }
+    }
+  }
+
+  .nav-menu.visible {
+    @include transform(translate(100%, 0));
+  }
+
+  #footer_bottom{
+    text-align: center;
+  }
+  .footer_logo{
+    text-align: center;
+    img{
+      margin:  0 auto 20px;
     }
   }
 }
