--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,64 +152,17 @@ a:hover {
       display: block;
       animation: navSlideDown 0.3s 1; } }
 
-/*
-.navbar{
-  border-bottom: solid 2px $light_gray;
-}
+#navToggle {
+  display: none;
+  position: fixed;
+  z-index: 101;
+  top: 5px;
+  right: 5px;
+  background: #89b1d5;
+  border: none;
+  color: #fff;
+  padding: 5px 15px; }
 
-.navbar-toggle{
-  .button-text{
-    display: inline-block;
-    vertical-align: middle;
-    text-transform: uppercase;
-    font-family: $fontTitle;
-    font-size:  16px;
-    margin-right: 10px;
-  }
-  .icon-bars{
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .icon-bar{
-    background-color: $gray;
-  }
-}
-.navbar:before{
-  content: '';
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: $light_gray;
-  margin-top: 100px;
-}
-
-.navbar-nav{
-  a{
-    text-transform: uppercase;
-    color: $gray;
-    font-family: $fontTitle;
-    font-size: 16px;
-    position: relative;
-    
-    img{
-      position: absolute;
-      left: 50%;
-      bottom: 70px;
-      -webkit-transform: translate(-50%,0);
-      -moz-transform: translate(-50%,0);
-      -ms-transform: translate(-50%,0);
-      -o-transform: translate(-50%,0);
-      transform: translate(-50%,0);
-    }
-  }
-}
-
-.dropdown-menu{
-  a{
-    font-family: $fontMain;
-    font-size: 14px;
-  }
-}*/
 @media (min-width: 991px) {
   .navbar-nav {
     float: none;
@@ -252,11 +205,12 @@ footer {
     margin-bottom: 20px; }
 
 .footer_social_menu {
-  margin: 30px 0;
+  margin: 15px 0;
   padding: 0;
   list-style: none; }
   .footer_social_menu li {
-    float: left;
+    display: inline-block;
+    vertical-align: top;
     margin-right: 25px; }
     .footer_social_menu li a {
       display: inline-block;
@@ -298,22 +252,59 @@ footer {
     width: 100%;
     overflow-x: hidden; }
 
+  #top_header {
+    display: none; }
+
+  #logo_bar img {
+    height: auto;
+    width: 65%; }
+
+  #navToggle {
+    display: block; }
+
   .nav-menu {
     position: fixed;
     z-index: 100;
     height: 100%;
-    width: 80%;
-    background-color: rgba(255, 255, 255, 0.85);
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 10px 0;
     top: 0;
-    left: -80%;
+    left: -100%;
     margin: 0;
     border: 0;
-    text-align: left;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
+    .nav-menu .main-menu {
+      position: relative; }
+      .nav-menu .main-menu li {
+        display: block;
+        margin: 0; }
+    .nav-menu .menu-item {
+      display: block;
+      padding-left: 50px;
+      margin-bottom: 15px; }
+      .nav-menu .menu-item img {
+        left: 25px;
+        top: 3px;
+        height: 35px; }
+    .nav-menu .menu-item:hover,
+    .nav-menu .menu-item.active,
+    .nav-menu .sub-menu:hover > .menu-item {
+      box-shadow: inset 3px 0 0 #f8c7a4; }
+    .nav-menu .sub-menu {
+      height: 43px;
+      overflow: hidden;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+      .nav-menu .sub-menu ul {
+        display: block;
+        position: relative;
+        background: none; }
 
   .nav-menu.visible {
     -webkit-transform: translate(100%, 0);
@@ -321,32 +312,13 @@ footer {
     -o-transform: translate(100%, 0);
     -ms-transform: translate(100%, 0);
     transform: translate(100%, 0); }
-    .nav-menu.visible .main-menu {
-      position: relative; }
-      .nav-menu.visible .main-menu li {
-        display: block;
-        margin: 0; }
-    .nav-menu.visible .menu-item {
-      display: block;
-      padding-left: 50px;
-      border-bottom: solid 1px #f2f2f2; }
-      .nav-menu.visible .menu-item img {
-        left: 25px;
-        top: 3px;
-        height: 35px; }
-    .nav-menu.visible .menu-item:hover,
-    .nav-menu.visible .menu-item.active,
-    .nav-menu.visible .sub-menu:hover > .menu-item {
-      box-shadow: inset 3px 0 0 #f8c7a4; }
-    .nav-menu.visible .sub-menu {
-      height: 43px;
-      overflow: hidden;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
-      .nav-menu.visible .sub-menu ul {
-        display: block;
-        position: relative; } }
+
+  #footer_bottom {
+    text-align: center; }
+
+  .footer_logo {
+    text-align: center; }
+    .footer_logo img {
+      margin: 0 auto 20px; } }
 
 /*# sourceMappingURL=style.css.map */
