--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,4 +3,7 @@
 @import "mixins";
 @import "animations";
 @import "general";
+@import "header";
+@import "footer";
+@import "carousel";
 @import "responsive";
