--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,39 @@
 a:hover {
   text-decoration: none; }
 
+.mobile-only {
+  display: none !important; }
+
+.section-title {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  position: relative; }
+  .section-title h2 {
+    font-family: "deliusregular", sans-serif;
+    font-size: 45px;
+    color: #89b1d5;
+    padding: 0 10px;
+    display: inline-block;
+    background-color: #fff; }
+  .section-title small {
+    font-family: "Open Sans", sans-serif;
+    display: block; }
+
+.section-title:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  top: 42px;
+  width: 100%;
+  height: 2px;
+  background-color: #f2f2f2; }
+
+header {
+  margin-bottom: 30px; }
+
 #top_header {
   font-size: 13px;
   text-transform: uppercase;
@@ -163,13 +196,6 @@ a:hover {
   color: #fff;
   padding: 5px 15px; }
 
-@media (min-width: 991px) {
-  .navbar-nav {
-    float: none;
-    text-align: center; }
-    .navbar-nav li {
-      float: none;
-      display: inline-block; } }
 footer {
   background-color: #f8f8f8;
   padding-top: 25px; }
@@ -247,10 +273,44 @@ footer {
     margin-bottom: 8px;
     display: block; }
 
+.slick {
+  width: 100%;
+  overflow: hidden; }
+  .slick .slide {
+    margin: 0 5px;
+    position: relative; }
+    .slick .slide img {
+      width: 100%; }
+    .slick .slide .slide-description {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 110px;
+      text-align: center;
+      padding: 30px 20px;
+      color: #fff;
+      font-size: 18px;
+      text-transform: uppercase;
+      font-family: "deliusregular", sans-serif;
+      background-color: rgba(248, 199, 164, 0.85); }
+  .slick .slide:nth-of-type(odd) .slide-description {
+    background-color: rgba(137, 177, 213, 0.85); }
+
 @media (max-width: 991px) {
   html {
     width: 100%;
     overflow-x: hidden; }
+
+  .navbar-nav {
+    float: none;
+    text-align: center; }
+    .navbar-nav li {
+      float: none;
+      display: inline-block; }
+
+  .mobile-only {
+    display: block !important; }
 
   #top_header {
     display: none; }
