--- a/src/css/_carousel.scss
+++ b/src/css/_carousel.scss
@@ -2,8 +2,9 @@
   width: 100%;
   overflow: hidden;
   .slide{
-    margin: 0 5px;
+    margin: 0 20px;
     position: relative;
+    overflow: hidden;
     img{
       width: 100%;
     }
@@ -12,14 +13,23 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 110px;
+      height: 100px;
       text-align: center;
-      padding: 30px 20px;
       color: #fff;
       font-size: 18px;
       text-transform: uppercase;
       font-family: $fontTitle;
       background-color: rgba($orange, 0.85);
+
+      p{
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        width: 90%;
+        left: 50%;
+        top: 50%;
+        @include transform(translate(-50%,-50%));
+      }
     }
   }
   .slide:nth-of-type(odd){
