--- a/src/css/style.css
+++ b/src/css/style.css
@@ -277,8 +277,9 @@ footer {
   width: 100%;
   overflow: hidden; }
   .slick .slide {
-    margin: 0 5px;
-    position: relative; }
+    margin: 0 20px;
+    position: relative;
+    overflow: hidden; }
     .slick .slide img {
       width: 100%; }
     .slick .slide .slide-description {
@@ -286,14 +287,25 @@ footer {
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 110px;
+      height: 100px;
       text-align: center;
-      padding: 30px 20px;
       color: #fff;
       font-size: 18px;
       text-transform: uppercase;
       font-family: "deliusregular", sans-serif;
       background-color: rgba(248, 199, 164, 0.85); }
+      .slick .slide .slide-description p {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        width: 90%;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); }
   .slick .slide:nth-of-type(odd) .slide-description {
     background-color: rgba(137, 177, 213, 0.85); }
 
@@ -379,6 +391,17 @@ footer {
   .footer_logo {
     text-align: center; }
     .footer_logo img {
-      margin: 0 auto 20px; } }
+      margin: 0 auto 20px; }
+
+  .slick .slide {
+    margin: 0 10px; }
+    .slick .slide .slide-description {
+      height: 80px;
+      font-size: 15px; } }
+@media (max-width: 480px) {
+  .slick .slide {
+    margin: 0 4px; }
+    .slick .slide .slide-description {
+      font-size: 15px; } }
 
 /*# sourceMappingURL=style.css.map */
