--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -15,6 +15,7 @@ a:hover{
   text-transform: uppercase;
   letter-spacing: 5px;
   position: relative;
+  margin: 50px 0;
   h2{
     font-family: $fontTitle;
     font-size: 45px;
