--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,8 @@ a:hover {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 5px;
-  position: relative; }
+  position: relative;
+  margin: 50px 0; }
   .section-title h2 {
     font-family: "deliusregular", sans-serif;
     font-size: 45px;
