--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -8,3 +8,22 @@
     -webkit-transform: translate(0, 0);
   }
 }
+
+@keyframes float{
+  from{
+    opacity: 0;
+    transform: translate(0, 100px);
+  }
+  to{
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+.slideUp{
+  opacity: 0;
+}
+.animated{
+  animation-name: float;
+  animation-duration: 1s;
+  animation-count: 1;
+}
