--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,21 @@
   to {
     opacity: 1;
     -webkit-transform: translate(0, 0); } }
+@keyframes float {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px); }
+  to {
+    opacity: 1;
+    transform: translate(0, 0); } }
+.slideUp {
+  opacity: 0; }
+
+.animated {
+  animation-name: float;
+  animation-duration: 1s;
+  animation-count: 1; }
+
 *,
 *:focus {
   outline: none; }
@@ -282,12 +297,17 @@ footer {
     position: relative;
     overflow: hidden; }
     .slick .slide img {
-      width: 100%; }
+      width: 100%;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
     .slick .slide .slide-description {
       position: absolute;
       left: 0;
       bottom: 0;
       width: 100%;
+      z-index: 2;
       height: 100px;
       text-align: center;
       color: #fff;
@@ -307,6 +327,12 @@ footer {
         -o-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%); }
+  .slick .slide:hover img {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1); }
   .slick .slide:nth-of-type(odd) .slide-description {
     background-color: rgba(137, 177, 213, 0.85); }
 
