--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,24 +35,42 @@
 @keyframes navSlideDown {
   from {
     opacity: 0;
-    -webkit-transform: translate(0, -20px); }
+    -webkit-transform: translate(0, -20px);
+    -moz-transform: translate(0, -20px);
+    -o-transform: translate(0, -20px);
+    -ms-transform: translate(0, -20px);
+    transform: translate(0, -20px); }
   to {
     opacity: 1;
-    -webkit-transform: translate(0, 0); } }
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0); } }
 @keyframes float {
   from {
     opacity: 0;
+    -webkit-transform: translate(0, 100px);
+    -moz-transform: translate(0, 100px);
+    -o-transform: translate(0, 100px);
+    -ms-transform: translate(0, 100px);
     transform: translate(0, 100px); }
   to {
     opacity: 1;
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
     transform: translate(0, 0); } }
 .slideUp {
   opacity: 0; }
 
 .animated {
-  animation-name: float;
-  animation-duration: 1s;
-  animation-count: 1; }
+  -webkit-animation: float 1s 1;
+  -moz-animation: float 1s 1;
+  -o-animation: float 1s 1;
+  -ms-animation: float 1s 1;
+  animation: float 1s 1; }
 
 *,
 *:focus {
