--- a/src/css/style.css
+++ b/src/css/style.css
@@ -354,6 +354,42 @@ footer {
   .slick .slide:nth-of-type(odd) .slide-description {
     background-color: rgba(137, 177, 213, 0.85); }
 
+.articles .article {
+  display: inline-block;
+  padding: 15px 15px 50px;
+  border-bottom: solid 6px #f8c7a4;
+  margin-bottom: 50px;
+  box-shadow: 0 0 8px #e5e5e5;
+  position: relative; }
+  .articles .article .img-frame {
+    position: relative;
+    overflow: hidden;
+    height: 250px;
+    width: 100%; }
+    .articles .article .img-frame img {
+      position: absolute;
+      left: 50%;
+      width: 100%;
+      top: 0;
+      -webkit-transform: translate(-50%, 0);
+      -moz-transform: translate(-50%, 0);
+      -o-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+      transform: translate(-50%, 0);
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+  .articles .article .title {
+    font-family: "deliusregular", sans-serif;
+    margin: 30px 0;
+    font-size: 20px;
+    line-height: 28px;
+    color: #5c6468; }
+  .articles .article .abstract {
+    font-family: "Open Sans", sans-serif;
+    color: #5c6468; }
+
 @media (max-width: 991px) {
   html {
     width: 100%;
