--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -106,6 +106,19 @@
       }
     }
   }
+
+  .articles{
+    .article{
+      margin-bottom: 30px;
+      .img-frame{
+        height: 200px;
+      }
+
+      .title{
+        margin:  15px 0;
+      }
+    }
+  }
 }
 
 @media (max-width: 480px) {
