--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,11 +66,11 @@
   opacity: 0; }
 
 .animated {
-  -webkit-animation: float 1s 1;
-  -moz-animation: float 1s 1;
-  -o-animation: float 1s 1;
-  -ms-animation: float 1s 1;
-  animation: float 1s 1; }
+  -webkit-animation: float 1s ease 1;
+  -moz-animation: float 1s ease 1;
+  -o-animation: float 1s ease 1;
+  -ms-animation: float 1s ease 1;
+  animation: float 1s ease 1; }
 
 *,
 *:focus {
@@ -389,6 +389,10 @@ footer {
   .articles .article .abstract {
     font-family: "Open Sans", sans-serif;
     color: #5c6468; }
+.articles .row:nth-of-type(even) .col-sm-6:first-of-type .article {
+  border-color: #89b1d5; }
+.articles .row:nth-of-type(odd) .col-sm-6:nth-of-type(odd) .article {
+  border-color: #89b1d5; }
 
 @media (max-width: 991px) {
   html {
@@ -478,7 +482,14 @@ footer {
     margin: 0 10px; }
     .slick .slide .slide-description {
       height: 80px;
-      font-size: 15px; } }
+      font-size: 15px; }
+
+  .articles .article {
+    margin-bottom: 30px; }
+    .articles .article .img-frame {
+      height: 200px; }
+    .articles .article .title {
+      margin: 15px 0; } }
 @media (max-width: 480px) {
   .slick .slide {
     margin: 0 4px; }
