--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -25,3 +25,15 @@
 .animated{
   @include animation(float 1s ease 1);
 }
+
+
+@keyframes showNav{
+  from{
+    opacity: 0;
+    @include transform(translate(0, -100px));
+  }
+  to{
+    opacity: 1;
+    @include transform(translate(0, 0));
+  }
+}
