--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,5 +1,49 @@
 header{
   margin-bottom: 30px;
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  @include transition(1s);
+}
+
+header.fixed{
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  width: 100%;
+  margin: 0;
+  box-shadow: 0 2px 10px rgba(#000, 0.2);
+  @include animation(showNav 0.7s ease 1);
+
+
+  #logo_bar{
+    padding: 10px 0 !important;
+    .slogan{
+      display: none;
+    }
+    img{
+      height: 100px;
+    }
+  }
+
+  .nav-menu{
+    margin-top: 0;
+
+    .menu-item{
+      font-size: 13px;
+      padding: 10px 10px 10px 30px;
+
+      img{
+        position: absolute;
+        left: 5px;
+        top: 2px;
+        height: 30px !important;
+      }
+    }
+  }
 }
 
 #top_header{
@@ -7,8 +51,11 @@ header{
   text-transform: uppercase;
   font-family: $fontMain;
   font-weight: 300;
+  z-index: 10;
+  position: relative;
   color: $gray;
   padding: 10px 0;
+  margin-bottom: 520px;
   border-bottom: solid 2px $light_gray;
 
   ul{
@@ -22,7 +69,7 @@ header{
   }
 }
 
-#top_nav_bar{
+.top_nav_bar{
   text-align: center;
 
   .link_space{
@@ -33,13 +80,26 @@ header{
     color: $gray;
   }
 }
+.top_nav_bar.mobile-only{
+  a{
+    display: block;
+    padding: 8px 15px;
+
+  }
+  a:focus,
+  a:hover{
+    color: $orange;
+  }
+ }
 
 #logo_bar{
   padding: 80px 0 15px;
   text-align: center;
+  @include transition(0.3s);
 
   img{
     height: 280px;
+    @include transition(0.3s);
   }
   .slogan{
     color: $gray;
@@ -53,6 +113,7 @@ header{
   border-bottom: solid 2px $light_gray;
   text-align: center;
   margin-top: 80px;
+  @include transition(0.3s);
 
   .container{
     width: auto;
@@ -84,13 +145,14 @@ header{
     cursor: pointer;
     display: inline-block;
     padding: 10px 15px;
-    @include transition(0.2s);
     position: relative;
+    @include transition(0.3s);
 
     img{
       position: absolute;
       left: 50%;
       top: -70px;
+      @include transition(0.3s);
       @include transform(translate(-50%,0));
     }
   }
