--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -19,7 +19,8 @@
   }
 
   #top_header{
-    display: none;
+    opacity: 0;
+    margin-bottom: 400px;
   }
 
   #logo_bar{
@@ -38,7 +39,7 @@
     z-index: 100;
     height: 100%;
     width: 100%;
-    background-color: rgba(#fff, 0.95);
+    background-color: #fff;
     padding: 10px 0;
     top: 0;
     left: -100%;
@@ -47,6 +48,8 @@
     @include transition(0.3s);
 
     .main-menu{
+      padding-top: 10px;
+      margin-top: 30px;
       position: relative;
       li{
         display: block;
@@ -121,6 +124,24 @@
   }
 }
 
+@media (max-width: 768px){
+  #top_header{
+    margin-bottom: 400px;
+  }
+}
+
+@media (max-width: 640px){
+  #top_header{
+    margin-bottom: 350px;
+  }
+}
+
+@media (max-width: 560px){
+  #top_header{
+    margin-bottom: 320px;
+  }
+}
+
 @media (max-width: 480px) {
   .slick{
     .slide{
@@ -129,5 +150,15 @@
         font-size: 15px;
       }
     }
+  }
+
+  #top_header{
+    margin-bottom: 300px;
+  }
+}
+
+@media (max-width: 380px){
+  #top_header{
+    margin-bottom: 230px;
   }
 }
