--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,11 +72,27 @@
   -ms-animation: float 1s ease 1;
   animation: float 1s ease 1; }
 
+@keyframes showNav {
+  from {
+    opacity: 0;
+    -webkit-transform: translate(0, -100px);
+    -moz-transform: translate(0, -100px);
+    -o-transform: translate(0, -100px);
+    -ms-transform: translate(0, -100px);
+    transform: translate(0, -100px); }
+  to {
+    opacity: 1;
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0); } }
 *,
 *:focus {
   outline: none; }
 
-a:hover {
+a:hover,
+a:focus {
   text-decoration: none; }
 
 .mobile-only {
@@ -111,15 +127,57 @@ a:hover {
   background-color: #f2f2f2; }
 
 header {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out; }
+
+header.fixed {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  width: 100%;
+  margin: 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  -webkit-animation: showNav 0.7s ease 1;
+  -moz-animation: showNav 0.7s ease 1;
+  -o-animation: showNav 0.7s ease 1;
+  -ms-animation: showNav 0.7s ease 1;
+  animation: showNav 0.7s ease 1; }
+  header.fixed #logo_bar {
+    padding: 10px 0 !important; }
+    header.fixed #logo_bar .slogan {
+      display: none; }
+    header.fixed #logo_bar img {
+      height: 100px; }
+  header.fixed .nav-menu {
+    margin-top: 0; }
+    header.fixed .nav-menu .menu-item {
+      font-size: 13px;
+      padding: 10px 10px 10px 30px; }
+      header.fixed .nav-menu .menu-item img {
+        position: absolute;
+        left: 5px;
+        top: 2px;
+        height: 30px !important; }
 
 #top_header {
   font-size: 13px;
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
+  z-index: 10;
+  position: relative;
   color: #5c6468;
   padding: 10px 0;
+  margin-bottom: 520px;
   border-bottom: solid 2px #f2f2f2; }
   #top_header ul {
     list-style: none;
@@ -128,19 +186,34 @@ header {
     #top_header ul li {
       display: inline-block; }
 
-#top_nav_bar {
+.top_nav_bar {
   text-align: center; }
-  #top_nav_bar .link_space {
+  .top_nav_bar .link_space {
     width: 30px; }
-  #top_nav_bar a {
+  .top_nav_bar a {
     padding: 15px;
     color: #5c6468; }
 
+.top_nav_bar.mobile-only a {
+  display: block;
+  padding: 8px 15px; }
+.top_nav_bar.mobile-only a:focus,
+.top_nav_bar.mobile-only a:hover {
+  color: #fb7660; }
+
 #logo_bar {
   padding: 80px 0 15px;
-  text-align: center; }
+  text-align: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
   #logo_bar img {
-    height: 280px; }
+    height: 280px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
   #logo_bar .slogan {
     color: #5c6468;
     letter-spacing: 8px;
@@ -151,7 +224,11 @@ header {
   border-top: solid 2px #f2f2f2;
   border-bottom: solid 2px #f2f2f2;
   text-align: center;
-  margin-top: 80px; }
+  margin-top: 80px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
   .nav-menu .container {
     width: auto; }
   .nav-menu ul {
@@ -172,15 +249,19 @@ header {
     cursor: pointer;
     display: inline-block;
     padding: 10px 15px;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    position: relative; }
+    position: relative;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
     .nav-menu .menu-item img {
       position: absolute;
       left: 50%;
       top: -70px;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
       -webkit-transform: translate(-50%, 0);
       -moz-transform: translate(-50%, 0);
       -o-transform: translate(-50%, 0);
@@ -189,7 +270,7 @@ header {
   .nav-menu .menu-item:hover,
   .nav-menu .menu-item.active,
   .nav-menu .sub-menu:hover > .menu-item {
-    box-shadow: inset 0 -3px 0 #f8c7a4; }
+    box-shadow: inset 0 -3px 0 #fb7660; }
   .nav-menu .sub-menu {
     position: relative; }
     .nav-menu .sub-menu ul {
@@ -213,7 +294,7 @@ header {
         -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out; }
       .nav-menu .sub-menu li a:hover {
-        border-color: #f8c7a4; }
+        border-color: #fb7660; }
   @media (min-width: 992px) {
     .nav-menu .sub-menu:hover > ul {
       display: block;
@@ -277,7 +358,7 @@ footer {
       width: 50px;
       height: 50px;
       border-radius: 100%;
-      background-color: #f8c7a4;
+      background-color: #fb7660;
       color: #fff;
       font-size: 23px;
       position: relative; }
@@ -297,7 +378,7 @@ footer {
   list-style: none; }
   .footer_link_list h6 {
     text-transform: uppercase;
-    color: #f8c7a4;
+    color: #fb7660;
     font-size: 18px;
     font-family: "deliusregular", sans-serif;
     margin-bottom: 15px; }
@@ -332,7 +413,7 @@ footer {
       font-size: 18px;
       text-transform: uppercase;
       font-family: "deliusregular", sans-serif;
-      background-color: rgba(248, 199, 164, 0.85); }
+      background-color: rgba(251, 118, 96, 0.85); }
       .slick .slide .slide-description p {
         position: absolute;
         margin: 0;
@@ -357,7 +438,7 @@ footer {
 .articles .article {
   display: inline-block;
   padding: 15px 15px 50px;
-  border-bottom: solid 6px #f8c7a4;
+  border-bottom: solid 6px #fb7660;
   margin-bottom: 50px;
   box-shadow: 0 0 8px #e5e5e5;
   position: relative; }
@@ -410,7 +491,8 @@ footer {
     display: block !important; }
 
   #top_header {
-    display: none; }
+    opacity: 0;
+    margin-bottom: 400px; }
 
   #logo_bar img {
     height: auto;
@@ -424,7 +506,7 @@ footer {
     z-index: 100;
     height: 100%;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: #fff;
     padding: 10px 0;
     top: 0;
     left: -100%;
@@ -435,6 +517,8 @@ footer {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
     .nav-menu .main-menu {
+      padding-top: 10px;
+      margin-top: 30px;
       position: relative; }
       .nav-menu .main-menu li {
         display: block;
@@ -450,7 +534,7 @@ footer {
     .nav-menu .menu-item:hover,
     .nav-menu .menu-item.active,
     .nav-menu .sub-menu:hover > .menu-item {
-      box-shadow: inset 3px 0 0 #f8c7a4; }
+      box-shadow: inset 3px 0 0 #fb7660; }
     .nav-menu .sub-menu {
       height: 43px;
       overflow: hidden;
@@ -490,10 +574,25 @@ footer {
       height: 200px; }
     .articles .article .title {
       margin: 15px 0; } }
+@media (max-width: 768px) {
+  #top_header {
+    margin-bottom: 400px; } }
+@media (max-width: 640px) {
+  #top_header {
+    margin-bottom: 350px; } }
+@media (max-width: 560px) {
+  #top_header {
+    margin-bottom: 320px; } }
 @media (max-width: 480px) {
   .slick .slide {
     margin: 0 4px; }
     .slick .slide .slide-description {
-      font-size: 15px; } }
+      font-size: 15px; }
+
+  #top_header {
+    margin-bottom: 300px; } }
+@media (max-width: 380px) {
+  #top_header {
+    margin-bottom: 230px; } }
 
 /*# sourceMappingURL=style.css.map */
