--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -17,13 +17,16 @@ a:focus{
   letter-spacing: 5px;
   position: relative;
   margin: 50px 0;
-  h2{
+  h2, h3{
     font-family: $fontTitle;
     font-size: 45px;
     color: $blue;
     padding: 0 10px;
     display: inline-block;
     background-color: #fff;
+  }
+  h3{
+    font-size: 25px;
   }
   small{
     font-family: $fontMain;
@@ -36,8 +39,40 @@ a:focus{
   position: absolute;
   left: 0;
   z-index: -1;
-  top: 42px;
+  top: 50%;
   width: 100%;
   height: 2px;
   background-color: $light_gray;
+}
+
+.breadcrumbs{
+  list-style: none;
+  padding: 0 0 20px;
+  text-align: center;
+  border-bottom: solid 2px $light_gray;
+
+  li{
+    display: inline-block;
+    vertical-align: top;
+    a{
+      padding: 10px;
+      text-transform: uppercase;
+      font-family: $fontMain;
+      color: $gray;
+    }
+  }
+  li:after{
+    content: '>';
+    display: inline-block;
+    margin: 0;
+  }
+  li:last-of-type{
+    a{
+      color: $orange;
+    }
+  }
+  li:last-of-type:after{
+    content: '';
+    display: none;
+  }
 }
