Updates: - Annuaire Font size

--- a/src/css/_annuaire.scss
+++ b/src/css/_annuaire.scss
@@ -17,6 +17,8 @@
   .etablissement{
     margin-bottom: 25px;
     padding: 30px 20px;
+    font-family: $fontMain;
+    font-size: 15px;
     box-shadow: 0 0 5px rgba($gray,0.2),0 5px 5px $light_gray;
 
     h4{
