--- a/src/css/style.css
+++ b/src/css/style.css
@@ -612,6 +612,8 @@ div.zabuto_calendar .badge-event {
 .liste-etablissements .etablissement {
   margin-bottom: 25px;
   padding: 30px 20px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
   box-shadow: 0 0 5px rgba(92, 100, 104, 0.2), 0 5px 5px #f2f2f2; }
   .liste-etablissements .etablissement h4 {
     font-family: "deliusregular", sans-serif;
