--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -37,3 +37,23 @@
     @include transform(translate(0, 0));
   }
 }
+@keyframes showLeftSliderControl{
+  from{
+    opacity: 0;
+    @include transform(translate(-20px,-50%));
+  }
+  to{
+    opacity: 0.7;
+    @include transform(translate(0, -50%));
+  }
+}
+@keyframes showRightSliderControl{
+  from{
+    opacity: 0;
+    @include transform(translate(20px,-50%));
+  }
+  to{
+    opacity: 0.7;
+    @include transform(translate(0, -50%));
+  }
+}
