--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -5,6 +5,9 @@
 body{
   color: #50585C;
 }
+.rel{
+  position: relative;
+}
 a:hover,
 a:focus{
   text-decoration: none;
@@ -58,6 +61,23 @@ a:focus{
   background-color: $light_gray;
 }
 
+.back-to-top{
+  position: fixed;
+  right: 15px;
+  bottom: 13px;
+  display: inline-block;
+  visibility: hidden;
+  opacity: 0.8;
+  padding: 12px 15px;
+  cursor: pointer;
+  background-color: $orange;
+  color: #fff;
+  @include transition(0.3s);
+}
+.back-to-top.visible{
+  visibility: visible;
+}
+
 .breadcrumbs{
   list-style: none;
   padding: 0 0 20px;
@@ -93,4 +113,33 @@ a:focus{
   text-align: left;
   border: none;
   padding: 20px 0 0;
+}
+
+.banner-image{
+  background-size: cover;
+  background-position: center center;
+  padding: 80px 0;
+  position: relative;
+}
+.page-title{
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  font-family: $fontTitle;
+  position: relative;
+  z-index: 1;
+
+}
+.banner-image:after{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #000;
+  opacity: 0.4;
+  left: 0;
+  top: 0;
+  z-index: 0;
 }
