--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -208,3 +208,50 @@ header.fixed{
   color: #fff;
   padding: 5px 15px;
 }
+
+.top_search_bar{
+  position: absolute;
+  padding: 5px 0;
+  background-color: #fff;
+  border-bottom: solid 2px $light_gray;
+  left: 50%;
+  width: 100%;
+  opacity: 0;
+  z-index: -100;
+  @include transform(translate(-50%,0));
+  @include transition(0.4s);
+  top: 20px;
+  .container{
+    position: relative;
+  }
+
+  form{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+  }
+  input{
+    display: inline-block;
+    flex-grow: 1;
+    border: none;
+  }
+  button{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: none;
+    background-color: #c0c0c0;
+    color: #fff;
+    cursor: pointer;
+    @include transition(0.3s);
+  }
+  button:hover{
+    background-color: $blue;
+  }
+}
+.top_search_bar.visible{
+  top: 40px;
+  opacity: 1;
+  z-index: 0;
+}
