--- a/src/css/_articles.scss
+++ b/src/css/_articles.scss
@@ -62,7 +62,7 @@
   height: 500px;
   overflow: hidden;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 
   img{
     width: 100%;
@@ -72,10 +72,8 @@
   }
 }
 
-.article-suggestions{
-  .section-title{
-    margin-bottom: 30px !important;
-  }
+.section-title.small{
+  margin-bottom: 30px !important;
 }
 
 .suggestion-list{
@@ -128,6 +126,57 @@
       img{
         @include transform(scale(1.2));
       }
+    }
+  }
+}
+
+#slick-forms{
+  margin: 20px 0;
+  background-color: #f8f8f8;
+  .slide.img{
+    background-size: cover;
+    background-position: center top;
+    height: 250px;
+    width: 100%;
+  }
+
+  #login-form,
+  #registration-form{
+    padding: 20px;
+    height: 250px;
+    h3{
+      font-family: $fontTitle;
+      margin-top: 0;
+    }
+    label{
+      display: block;
+      font-weight: normal;
+    }
+    .form-input{
+      display: block;
+      width: 100%;
+      height: 40px;
+      padding: 0 10px;
+      border: none;
+    }
+    button{
+      display: block;
+      width: 100%;
+      height: 40px;
+      font-family: $fontTitle;
+      color: #fff;
+      border: none;
+    }
+  }
+
+  #login-form{
+    button{
+      background-color: $orange;
+    }
+  }
+  #registration-form{
+    button{
+      background-color: $blue;
     }
   }
 }
