--- a/src/css/style.css
+++ b/src/css/style.css
@@ -247,7 +247,7 @@ a:focus {
   z-index: 0; }
 
 .sharethis-inline-share-buttons {
-  margin-bottom: 10px; }
+  margin: 10px 0 15px; }
 
 header {
   margin-bottom: 30px;
@@ -766,12 +766,12 @@ footer {
   #slick-forms .slide.img {
     background-size: cover;
     background-position: center top;
-    height: 250px;
+    height: 300px;
     width: 100%; }
   #slick-forms #login-form,
   #slick-forms #registration-form {
     padding: 20px;
-    height: 250px; }
+    height: 300px; }
     #slick-forms #login-form h3,
     #slick-forms #registration-form h3 {
       font-family: "deliusregular", sans-serif;
@@ -799,6 +799,103 @@ footer {
     background-color: #fb7660; }
   #slick-forms #registration-form button {
     background-color: #89b1d5; }
+
+.comment-form,
+.reply-form {
+  margin: 10px 0;
+  border-top: solid 1px #f2f2f2;
+  padding: 15px 0; }
+  .comment-form label,
+  .reply-form label {
+    display: none; }
+  .comment-form .form-input,
+  .reply-form .form-input {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: solid 1px #f2f2f2; }
+  .comment-form .form-input::placeholder,
+  .reply-form .form-input::placeholder {
+    color: #878787; }
+
+.reply-form .form-input {
+  border-radius: 20px; }
+
+.comment-list {
+  background-color: #f2f2f2; }
+  .comment-list .comment-container {
+    margin-bottom: 15px;
+    padding: 15px;
+    position: relative; }
+    .comment-list .comment-container .author-name {
+      font-weight: 700;
+      font-size: 14px;
+      color: #fb7660;
+      margin-bottom: 10px; }
+    .comment-list .comment-container .comment {
+      padding: 15px;
+      background-color: #fff;
+      border-radius: 10px;
+      margin-bottom: 5px;
+      position: relative; }
+    .comment-list .comment-container .publication-date {
+      position: absolute;
+      right: 10px;
+      bottom: -20px;
+      font-style: italic;
+      font-size: 12px;
+      text-align: right;
+      color: #878787; }
+    .comment-list .comment-container .likes-count {
+      position: absolute;
+      left: 0;
+      bottom: -15px;
+      z-index: 2000; }
+      .comment-list .comment-container .likes-count .like-button {
+        background-color: #fff;
+        display: inline-block;
+        position: relative;
+        padding: 8px;
+        border-radius: 12px;
+        cursor: pointer;
+        margin: 0;
+        font-weight: normal;
+        font-size: 12px;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1); }
+      .comment-list .comment-container .likes-count .like-button:before {
+        content: "\f004";
+        font-family: FontAwesome, sans-serif;
+        margin-right: 5px; }
+      .comment-list .comment-container .likes-count .like-button.liked:before {
+        color: #FF0500; }
+      .comment-list .comment-container .likes-count input[type="checkbox"] {
+        display: none; }
+  .comment-list .comment-container:last-child {
+    margin-bottom: 0; }
+  .comment-list .reply-button {
+    display: inline-block;
+    color: #5c6468;
+    border: none;
+    background: none;
+    padding: 8px 5px;
+    font-size: 13px; }
+  .comment-list .reply-button:hover {
+    color: #fb7660;
+    text-decoration: underline; }
+
+.replies-list .comment-container {
+  margin-bottom: 5px;
+  padding: 5px 0 5px 40px; }
+  .replies-list .comment-container .author-name {
+    font-weight: 700;
+    font-size: 14px;
+    color: #fb7660;
+    margin-bottom: 5px; }
+  .replies-list .comment-container .comment {
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-bottom: 5px; }
 
 div.zabuto_calendar .badge-today {
   background-color: #5c6468; }
