Updates: - Articles: Commentaires et formulaires

--- a/src/css/_articles.scss
+++ b/src/css/_articles.scss
@@ -85,6 +85,7 @@
   align-items: flex-start;
   position: relative;
   width: 100%;
+  margin-bottom: 40px;
 
   li{
     display: inline-block;
@@ -128,6 +129,26 @@
       }
     }
   }
+}
+
+.comments-section{
+  .header{
+    background-color: $light_gray;
+    padding: 15px;
+    margin-bottom: 20px;
+
+    .section-title{
+      font-family: $fontTitle;
+      font-size: 35px;
+    }
+    #loginFormButton,
+    #regFormButton{
+      background: none;
+      border: none;
+      color: $orange;
+    }
+  }
+
 }
 
 #slick-forms{
