--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -2,8 +2,16 @@
 *:focus{
   outline: none;
 }
+html{
+  height: 100%;
+  box-sizing: border-box;
+}
 body{
   color: #50585C;
+  min-height: 100%;
+  padding-bottom: 542px;
+  position: relative;
+  margin: 0;
 }
 .rel{
   position: relative;
@@ -16,6 +24,46 @@ a:focus{
 
 .mobile-only{
   display: none !important;
+}
+
+.error404{
+  background: url("../img/404.png") no-repeat right 100px center, $blue;
+  padding: 50px 0 150px;
+  color: #fff;
+  h1{
+    font-size: 50px;
+    font-family: $fontTitle;
+    margin: 30px 0 50px;
+  }
+  a{
+    color: $gray;
+    text-decoration: underline;
+  }
+  form{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+    color: $gray;
+  }
+  input{
+    display: inline-block;
+    flex-grow: 1;
+    border: none;
+    padding: 0 20px;
+  }
+  button{
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: $orange;
+    color: #fff;
+    cursor: pointer;
+    @include transition(0.3s);
+  }
+  button:hover{
+    background-color: $blue;
+  }
 }
 
 .section-title{
