--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,8 +121,16 @@
 *:focus {
   outline: none; }
 
+html {
+  height: 100%;
+  box-sizing: border-box; }
+
 body {
-  color: #50585C; }
+  color: #50585C;
+  min-height: 100%;
+  padding-bottom: 542px;
+  position: relative;
+  margin: 0; }
 
 .rel {
   position: relative; }
@@ -134,6 +142,42 @@ a:focus {
 
 .mobile-only {
   display: none !important; }
+
+.error404 {
+  background: url("../img/404.png") no-repeat right 100px center, #89b1d5;
+  padding: 50px 0 150px;
+  color: #fff; }
+  .error404 h1 {
+    font-size: 50px;
+    font-family: "deliusregular", sans-serif;
+    margin: 30px 0 50px; }
+  .error404 a {
+    color: #5c6468;
+    text-decoration: underline; }
+  .error404 form {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+    color: #5c6468; }
+  .error404 input {
+    display: inline-block;
+    flex-grow: 1;
+    border: none;
+    padding: 0 20px; }
+  .error404 button {
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: #fb7660;
+    color: #fff;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .error404 button:hover {
+    background-color: #89b1d5; }
 
 .section-title {
   text-align: center;
@@ -485,7 +529,10 @@ header.fixed {
 
 footer {
   background-color: #f8f8f8;
-  padding-top: 25px; }
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%; }
 
 #footer_bottom {
   margin-top: 30px;
@@ -524,7 +571,7 @@ footer {
   .footer_social_menu li {
     display: inline-block;
     vertical-align: top;
-    margin-right: 25px; }
+    margin-right: 5px; }
     .footer_social_menu li a {
       display: inline-block;
       width: 50px;
@@ -893,9 +940,12 @@ footer {
     background: none;
     padding: 8px 5px;
     font-size: 13px; }
+  .comment-list .reply-button:after {
+    content: "\f0d7";
+    font-family: FontAwesome, sans-serif;
+    margin-left: 5px; }
   .comment-list .reply-button:hover {
-    color: #fb7660;
-    text-decoration: underline; }
+    color: #fb7660; }
 
 .replies-list .comment-container {
   margin-bottom: 5px;
@@ -1006,10 +1056,16 @@ div.zabuto_calendar .badge-event {
       display: inline-block;
       margin-right: 15px; }
 
+@media (max-width: 1366px) {
+  .error404 {
+    background: #89b1d5; } }
 @media (max-width: 991px) {
   html {
     width: 100%;
     overflow-x: hidden; }
+
+  body {
+    padding-bottom: 830px; }
 
   .navbar-nav {
     float: none;
@@ -1106,6 +1162,9 @@ div.zabuto_calendar .badge-event {
     .articles .article .title {
       margin: 15px 0; } }
 @media (max-width: 768px) {
+  body {
+    padding-bottom: 430px; }
+
   #top_header {
     margin-bottom: 400px; }
 
